All models are trained

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 /Dataset_2017/Images
 /Dataset_2017/Masks
+/Dataset_2017_ph2/Images
+/Dataset_2017_ph2/Masks
+/Dataset_2018/Images
+/Dataset_2018/Masks
+/Dataset_2018/Mask_Images
 /runs
 /Trained_Models
